--- a/public/callback.html
+++ b/public/callback.html
@@ -3,24 +3,10 @@
 <head>
     <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
     <script>
-      var webAuth = new auth0.WebAuth({
-        domain: 'mvstg.auth0.com',
-        clientID: 'nnoeBQBXyJXDNBk0vU7U29fPWai2WGnI',
-        responseType: "code token id_token",
-        scope: "openid profile email"
-      });
-
-      webAuth.parseHash({
-        hash: window.location.hash
-      }, function(err, authResult) {
-        if (err) {
-          return console.log(err);
-        }
-        window.parent.postMessage({
-          type: "authorization_response",
-          response: authResult
-        }, "*")
-      });
+      window.parent.postMessage({
+        type: "authorization_response",
+        response: window.location.hash
+      }, "*")
   </script>
 </head>
 <body>
